kube/deploy/services/it-tools/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &n it-tools
  namespace: *n
spec:
  routes:
    - match: Host(`tools.${EXTERNAL_DOMAIN}`)
      kind: Rule
      services:
        - name: *n
          port: 80
      middlewares:
        - name: compress
          namespace: ingress
  tls:
    secretName: tls-cert-tools.${EXTERNAL_DOMAIN}
    domains:
      - main: tools.${EXTERNAL_DOMAIN}
